Fix mobile menu being misaligned

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -576,6 +576,7 @@ em {
             position: absolute;
             background: #0a1922;
             width: 100%;
+            top: 58px;
 
             li {
                 display: block;
